<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/respoke_blue"
    tools:context=".ConnectActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_respoke"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <ToggleButton
        android:id="@+id/brokered_auth_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textOn="Brokered Auth On"
        android:textOff="Brokered Auth Off"
        android:onClick="onBrokeredAuthClicked"/>

    <EditText
        android:id="@+id/endpoint_id_text_box"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brokered_auth_toggle_button"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/endpointID"
        android:background="@drawable/rect_text_edit"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:padding="4dp"
        android:textSize="15sp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/group_id_text_box"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endpoint_id_text_box"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_group"
        android:background="@drawable/rect_text_edit"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:padding="4dp"
        android:textSize="15sp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#F00"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/group_id_text_box"
        android:layout_marginTop="5dp"
        android:textSize="15sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_id_text_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="connect"
            android:background="@drawable/connect_button"
            android:text="@string/connect"
            android:textColor="@drawable/connect_button_text"/>

        <ProgressBar
            android:indeterminate="true"
            android:id="@+id/progress_circle"
            style="?android:attr/progressBarStyle"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"/>

        </RelativeLayout>

</RelativeLayout>
