<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Respoke</string>
    <string name="hello_world">respoke</string>
    <string name="action_settings">Settings</string>
    <string name="endpointID">Endpoint ID</string>
    <string name="login_group">Optional Group</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="message">Message</string>
    <string name="end_call">End</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="action_call">Call</string>
    <string name="action_join">Join</string>
    <string name="action_leave">Leave</string>
    <string name="pick_call">What kind of call?</string>
    <string name="pick_presence">Choose a status</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="group_id">Group ID</string>
    <string name="join_a_group">Join A Group:</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="incoming_connection">Incoming Direct Connection</string>
    <string name="answer">Answer</string>
    <string name="ignore">Ignore</string>
    <string name="endpoint_id_blank">Endpoint ID may not be blank</string>

</resources>
